Remove constant values from config endpoint and swagger definition
