# lib/endpoints/config.js
@@ -11,7 +11,6 @@
  * limitations under the License.
  */
 
-const env = require('../parse-env.js').env
 const { version } = require('../../package.json')
 
 /**
@@ -22,20 +21,10 @@ const { version } = require('../../package.json')
 async function getConfigInfoAsync(req, res, next) {
   res.contentType = 'application/json'
 
-  // TODO: Prune these items, are they really necessary anymore?
-  res.send(
-    Object.assign(
-      {},
-      {
-        version: version,
-        proof_expire_minutes: env.PROOF_EXPIRE_MINUTES,
-        get_proofs_max_rest: env.GET_PROOFS_MAX_REST,
-        post_hashes_max: env.POST_HASHES_MAX,
-        post_verify_proofs_max: env.POST_VERIFY_PROOFS_MAX,
-        time: new Date().toISOString()
-      }
-    )
-  )
+  res.send({
+    version: version,
+    time: new Date().toISOString()
+  })
   return next()
 }
 
